# tools

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  CMakeLists.txt  README.md
include/: zhist.hpp  zprompt.hpp
src/: clean_ds.cpp  imgsort.cpp  nvim-recent-files.cpp  tmux-status.cpp  translate.cpp  zgreeting.cpp  zhist.cpp  zprompt.cpp
src/zhist/: config.cpp
src/zhist/command/: add.cpp  init.cpp  list.cpp  load.cpp
src/zhist/sql/: insert.cpp  misc.cpp  select.cpp
src/zprompt/: config.cpp  cwd.cpp  git.cpp  ret.cpp  ssh.cpp  venv.cpp
